[tool.poetry]
name = "kflight"
version = "0.1.0"
description = ""
authors = ["Ionite <dev@ionite.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
krpc = "^0.5.2"
varname = "^0.11.0"
pure-eval = "^0.2.2"
asttokens = "^2.2.1"
typing-extensions = "^4.5.0"
numpy = "^1.24.2"
scipy = "^1.10.1"
pydantic = "^1.10.7"

[tool.poetry.group.jupyter.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
